# doctool_svelte

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  cdk.context.json  docker-compose.yaml  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  sst.config.ts
.sst/: stage
api/: .dockerignore  .env.local  .flake8  .gitignore  Dockerfile  Dockerfile.local  Makefile  basic_auth.py  db.py  main.py  migrate_db.py  pyproject.toml  requirements.txt
api/cruds/: advent_calendar.py  advent_calendar_article.py  article.py  login.py  review.py  signup.py  user.py
api/models/: __init__.py  advent_calendar.py  advent_calendar_article.py  article.py  article_tag.py  comment.py  like.py  review.py  tag.py  user.py
api/routers/: advent_calendar.py  advent_calendar_article.py  article.py  login.py  review.py  signup.py  user.py  users.py
api/schemas/: advent_calendar.py  advent_calendar_article.py  article.py  login.py  review.py  signup.py  user.py
app/: package-lock.json  package.json  sst.config.ts
app/src/: app.d.ts
app/src/lib/: s3.ts
app/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte
prisma/: dev.db  schema.prisma  seed.ts
src/: app.css  app.html  hooks.server.ts
src/lib/: api.ts  db.ts  s3.ts  user.model.ts
src/lib/components/: Article.svelte
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/guarded/: +page.server.ts  +page.svelte
src/routes/list/: +page.server.ts  (+1 more)
terraform/: .gitignore  .terraform.lock.hcl  ecr.tf  lambda.tf  outputs.tf  provider.tf  settings.tf  terraform.tfvars
(+59 files in other folders)
